--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,8 +26,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install black pytest
-        set DJANGO_SETTINGS_MODULE=testing.settings
+        pip install black pytest-django
+        set DJANGO_SETTINGS_MODULE='tests.django_app.settings'
 
     - name: Run tests
       run: |
