--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install black pytest-django
+        pip install black pytest
         set DJANGO_SETTINGS_MODULE='django_app.settings'
 
     - name: Run tests
