--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install black pytest
-        set DJANGO_SETTINGS_MODULE='django_app.settings'
+        set DJANGO_SETTINGS_MODULE='tests.django_app.settings'
 
     - name: Run tests
       run: |
