--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install black pytest
-        set DJANGO_SETTINGS_MODULE='tests.django_app.settings'
+
+    - name: Set DJANGO_SETTINGS_MODULE
+      env:
+        DJANGO_SETTINGS_MODULE: "tests.django_app.settings"
+      run: echo "DJANGO_SETTINGS_MODULE set to $DJANGO_SETTINGS_MODULE"
 
     - name: Run tests
       run: |
