--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,8 @@ jobs:
         cache: 'pip'
 
     - name: Install dependencies
+      with:
+        cache: 'pip'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
