--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,11 +24,17 @@ jobs:
         cache: 'pip'
 
     - name: Install dependencies
+      with:
+        cache: 'pip'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install black pytest
 
+    - name: Set DJANGO_SETTINGS_MODULE
+      env:
+        DJANGO_SETTINGS_MODULE: "tests.django_app.settings"
+      run: echo "DJANGO_SETTINGS_MODULE set to $DJANGO_SETTINGS_MODULE"
 
     - name: Run tests
       run: |
